# host_vllm

./: README.md  README_NEW.md  config.yaml  main.py  pip-packages-installed.txt  pyproject.toml  requirements.txt  run.sh
jobs/: README.md  glm4_6v_2gpus_fp8.sh  glm4_6v_4gpus_fp16.sh  glm4_7_2nodes_4gpus.sh  glm4_7_flash_2gpus.sh  gpt_oss_120b_single_h100.sh  gpt_oss_20b_single_h100.sh  llama4_maverick_2nodes_8gpus.sh  llama4_scout_2gpus.sh  qwen3_vl_235b_1node.sh
scripts/: README.md  query_openai_compatible.py
